// Copyright 2020-2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package login.v1;

option go_package = "hyperliquid-server/gen/login/v1;loginv1";

// Pet represents a pet in the pet store.
message LoginRequest {
    string address = 1;
    string msg = 2;
    string signature = 3;
}

message LoginResponse {
  string session = 1;
}

message LoginIsValidRequest {
  string session = 1;
  string address = 2;
}

message LoginIsValidResponse {
  bool valid = 1;
}

message LogoutRequest {
  string session = 1;
  string address = 2;
}

message LogoutResponse {}

message RegisterFcmRequest {
  string fcm_token = 1;
}

message RegisterFcmResponse {}

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc LoginIsValid(LoginIsValidRequest) returns (LoginIsValidResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc RegisterFcm(RegisterFcmRequest) returns (RegisterFcmResponse) {}
}
